feat(helm): set mainnet fullnode as default image

--- a/helm/ton-rust-node/values.yaml
+++ b/helm/ton-rust-node/values.yaml
@@ -16,7 +16,7 @@ command: []
 ##
 image:
   repository: ghcr.io/rsquad/ton-rust-node
-  tag: master
+  tag: mainnet
   pullPolicy: Always
 
 ## @section Resource parameters
