docs(helm): add publishing guide and fix install URL

--- a/helm/ton-rust-node/Chart.yaml
+++ b/helm/ton-rust-node/Chart.yaml
@@ -4,3 +4,6 @@ description: TON Rust Node deployment
 type: application
 version: 0.1.0
 appVersion: "latest"
+
+sources:
+  - https://github.com/rsquad/ton-rust-node
