chore(helm): bump chart to 0.1.1, set appVersion to v0.1.0-mainnet

--- a/helm/ton-rust-node/Chart.yaml
+++ b/helm/ton-rust-node/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: ton-rust-node
 description: TON Rust Node deployment
 type: application
-version: 0.1.0
-appVersion: "latest"
+version: 0.1.1
+appVersion: "v0.1.0-mainnet"
 
 sources:
   - https://github.com/rsquad/ton-rust-node
