fix(helm): do not expose metrics port on public LB services by default

--- a/helm/ton-rust-node/templates/services.yaml
+++ b/helm/ton-rust-node/templates/services.yaml
@@ -51,7 +51,7 @@ spec:
       port: {{ $root.Values.ports.jsonRpc }}
       protocol: TCP
     {{- end }}
-    {{- if $root.Values.ports.metrics }}
+    {{- if and $root.Values.ports.metrics $root.Values.debug.exposeMetrics }}
     - name: metrics
       port: {{ $root.Values.ports.metrics }}
       protocol: TCP
