fix(helm): move metrics to internal ClusterIP service, remove from LB

--- a/helm/ton-rust-node/templates/servicemonitor.yaml
+++ b/helm/ton-rust-node/templates/servicemonitor.yaml
@@ -15,6 +15,7 @@ spec:
   selector:
     matchLabels:
       {{- include "ton-rust-node.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/component: metrics
   {{- if .Values.metrics.serviceMonitor.namespace }}
   namespaceSelector:
     matchNames:
