--- a/helm/ton-rust-node/templates/services.yaml
+++ b/helm/ton-rust-node/templates/services.yaml
@@ -8,20 +8,12 @@ metadata:
   name: {{ $fullname }}-{{ $i }}
   labels:
     {{- include "ton-rust-node.labels" $root | nindent 4 }}
-  {{- $shared := $root.Values.services.annotations | default dict }}
-  {{- $perReplica := dict }}
-  {{- if and $root.Values.services.perReplica (lt $i (len $root.Values.services.perReplica)) }}
-  {{-   $perReplica = (index $root.Values.services.perReplica $i).annotations | default dict }}
-  {{- end }}
-  {{- $merged := mustMergeOverwrite (deepCopy $shared) $perReplica }}
-  {{- if $merged }}
-  annotations:
-    {{- $merged | toYaml | nindent 4 }}
-  {{- end }}
+    app.kubernetes.io/component: adnl
+  {{- include "ton-rust-node.serviceAnnotations" (dict "svcConfig" $root.Values.services.adnl "replicaIndex" $i) | nindent 2 }}
 spec:
-  type: {{ $root.Values.services.type }}
-  {{- if ne $root.Values.services.type "ClusterIP" }}
-  externalTrafficPolicy: {{ $root.Values.services.externalTrafficPolicy }}
+  type: {{ $root.Values.services.adnl.type }}
+  {{- if ne $root.Values.services.adnl.type "ClusterIP" }}
+  externalTrafficPolicy: {{ $root.Values.services.adnl.externalTrafficPolicy | default "Local" }}
   {{- end }}
   selector:
     {{- include "ton-rust-node.selectorLabels" $root | nindent 4 }}
@@ -30,20 +22,77 @@ spec:
     - name: adnl
       port: {{ $root.Values.ports.adnl }}
       protocol: UDP
-    {{- if $root.Values.ports.control }}
+
+{{- if $root.Values.ports.control }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ $fullname }}-{{ $i }}-control
+  labels:
+    {{- include "ton-rust-node.labels" $root | nindent 4 }}
+    app.kubernetes.io/component: control
+  {{- include "ton-rust-node.serviceAnnotations" (dict "svcConfig" $root.Values.services.control "replicaIndex" $i) | nindent 2 }}
+spec:
+  type: {{ $root.Values.services.control.type }}
+  {{- if ne $root.Values.services.control.type "ClusterIP" }}
+  externalTrafficPolicy: {{ $root.Values.services.control.externalTrafficPolicy | default "Local" }}
+  {{- end }}
+  selector:
+    {{- include "ton-rust-node.selectorLabels" $root | nindent 4 }}
+    statefulset.kubernetes.io/pod-name: {{ $fullname }}-{{ $i }}
+  ports:
     - name: control
       port: {{ $root.Values.ports.control }}
       protocol: TCP
-    {{- end }}
-    {{- if $root.Values.ports.liteserver }}
+{{- end }}
+
+{{- if $root.Values.ports.liteserver }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ $fullname }}-{{ $i }}-liteserver
+  labels:
+    {{- include "ton-rust-node.labels" $root | nindent 4 }}
+    app.kubernetes.io/component: liteserver
+  {{- include "ton-rust-node.serviceAnnotations" (dict "svcConfig" $root.Values.services.liteserver "replicaIndex" $i) | nindent 2 }}
+spec:
+  type: {{ $root.Values.services.liteserver.type }}
+  {{- if ne $root.Values.services.liteserver.type "ClusterIP" }}
+  externalTrafficPolicy: {{ $root.Values.services.liteserver.externalTrafficPolicy | default "Local" }}
+  {{- end }}
+  selector:
+    {{- include "ton-rust-node.selectorLabels" $root | nindent 4 }}
+    statefulset.kubernetes.io/pod-name: {{ $fullname }}-{{ $i }}
+  ports:
     - name: liteserver
       port: {{ $root.Values.ports.liteserver }}
       protocol: TCP
-    {{- end }}
-    {{- if $root.Values.ports.jsonRpc }}
+{{- end }}
+
+{{- if $root.Values.ports.jsonRpc }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ $fullname }}-{{ $i }}-jsonrpc
+  labels:
+    {{- include "ton-rust-node.labels" $root | nindent 4 }}
+    app.kubernetes.io/component: jsonrpc
+  {{- include "ton-rust-node.serviceAnnotations" (dict "svcConfig" $root.Values.services.jsonRpc "replicaIndex" $i) | nindent 2 }}
+spec:
+  type: {{ $root.Values.services.jsonRpc.type }}
+  {{- if ne $root.Values.services.jsonRpc.type "ClusterIP" }}
+  externalTrafficPolicy: {{ $root.Values.services.jsonRpc.externalTrafficPolicy | default "Local" }}
+  {{- end }}
+  selector:
+    {{- include "ton-rust-node.selectorLabels" $root | nindent 4 }}
+    statefulset.kubernetes.io/pod-name: {{ $fullname }}-{{ $i }}
+  ports:
     - name: json-rpc
       port: {{ $root.Values.ports.jsonRpc }}
       protocol: TCP
-    {{- end }}
+{{- end }}
 
 {{- end }}
